Day02 tasks finished